--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socket.io",
+  "name": "sio4",
   "version": "4.5.2",
   "description": "node.js realtime framework server",
   "keywords": [
